--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,16 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<div class="container">
+    
+    <header class="jumbotron">
+        {{#link-to 'index'}}<h1>--Help</h1>{{/link-to}}
+        <p>Ask and you shall be answered</p>
+        {{#link-to 'index'}}Home{{/link-to}}
+    </header>
+    
+    {{outlet}}
 
-{{outlet}}
+    <footer>
+        <p>2017 --Help</p>
+    </footer>
+
+</div>
+
