--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
 
 <ul>
     {{#each model as |question|}}
-        <li>{{question.questionTitle}}</li>
+        {{question-tile question=question}}
     {{/each}}
 </ul>
 
