Use Bootstrap CSS Use bootstrap to remove bullet points from ul list items Use bootstrap to add wells to list items

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,1 +1,6 @@
-<li>{{question.questionTitle}}</li>
+<div class="well">
+    <li>{{question.questionTitle}} 
+        <br>
+        by {{question.authorQuestion}}
+    </li>
+</div>
