--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <p>Welcome to <span class="help">--Help</span> where you can ask a question and receive an answer</p>
 
-<ul>
+<ul class="list-unstyled">
     {{#each model as |question|}}
         {{question-tile question=question}}
     {{/each}}
