Link Questions to their own route Link the list of questions displayed on the homepage to their own page when the link is clicked Modify the question route to direct the user to a new page for the clicked question

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,14 @@
 <div class="well">
-    <li>{{question.questionTitle}} 
-        <br>
-        by {{question.authorQuestion}}
-    </li>
+
+    {{!-- Link a question to page containing additional information --}}
+    {{#link-to 'question' question.id}}
+
+        {{!-- Display Question and Author --}}
+        <li>{{question.questionTitle}} 
+            <br>
+            by {{question.authorQuestion}}
+        </li>
+
+    {{/link-to}}
+
 </div>
