Connect Edit Question Component and Question Route Handler Render Edit Question Component and its edit action in question.hbs Edit the old question details with the new input values in the firebase database and reload the question page

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,2 +1,7 @@
-<h2>{{model.questionTitle}}</h2>
+<h2>{{model.questionTitle}} by {{model.authorQuestion}}</h2>
+
+<p>{{model.contentQuestion}}</p>
+
+{{!-- Rendering the edit-question component --}}
+{{edit-question question=model edit="edit"}}
 
