Change relationships between Components and Route Handlers Render New Answer Component in Question Template and remove it from Index Template Change reference to question object in the model in Imdex Temolate (from model to model.questions) Change bootstrap button style for the buttons in the Edit Question Component

--- a/app/templates/components/edit-question.hbs
+++ b/app/templates/components/edit-question.hbs
@@ -20,11 +20,11 @@
                 {{textarea rows="3" class="form-control" value=contentQuestion id="contentQuestion" placeholder=question.contentQuestion}}
             </div>
 
-            <button class="btn btn-success" {{action 'edit' question}}>Edit Your Question</button>
+            <button class="btn btn-info" {{action 'edit' question}}>Edit Your Question</button>
 
         </form>
 
     </div>
 {{else}}
-    <button class="btn btn-success" {{action 'showEditForm'}}>Edit</button>
+    <button class="btn btn-info" {{action 'showEditForm'}}>Edit Your Question</button>
 {{/if}}
