--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,17 +1,20 @@
 <div class="container">
-    
+
     <header class="jumbotron">
-        {{#link-to 'index'}}
-            <h1> --help </h1>
-        <p>Ask and you shall be answered</p>
+
+        <h1>{{#link-to 'index'}}--help{{/link-to}}</h1>
+
+        <p>Ask You Shall Be Answered</p>
+        
         {{#link-to 'index'}}Home{{/link-to}}
+
     </header>
-    
+
     {{outlet}}
+
+    <hr>
 
     <footer>
         <p>2017 --help </p>
     </footer>
-
 </div>
-
