--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -1,7 +1,7 @@
 {{#if addNewQuestion}}
-    <h2>Add a New Question</h2>
-    <div>
-        <form>
+    <h2 class="newQuestionHeader">Add a New Question</h2>
+    <div class="newQuestion">
+        <form class="newQuestion">
 
             <div class="form-group">
                 <label for="authorQuestion">Enter your name or username</label>
@@ -18,10 +18,10 @@
                 {{textarea rows="3" class="form-control" value=contentQuestion id="contentQuestion" placeholder="Enter details about the question"}}
             </div>
 
-            <button class="btn btn-success" {{action 'saveQuestion'}}>Submit Your Question</button>
+            <button class="btn btn-success" {{action 'saveQuestion'}}>Submit</button>
 
         </form>
     </div>
 {{else}}
-    <button class="btn btn-success" {{action 'showQuestionForm'}}>Add a question</button>
+    <button class="btn btn-success addQuestion" {{action 'showQuestionForm'}}>Add a question</button>
 {{/if}}
