--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well listOfQuestionsTile">
 
     {{!-- Link a question to page containing additional information --}}
     {{#link-to 'question' question.id}}
