Style Question Template and its components Style the forms in the Edit Question Component and Answer Question Component to match the style of the New Question Component form Change the top and bottom margin of the Add An Answer Button and Edit A Question Button Change the font family and font size of the headers, paragraphs and list items in Question Template

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -128,33 +128,55 @@ footer {
     font-family: 'Cutive Mono', monospace;  
 }
 
-.newQuestion{
-    font-size: 1.5em; 
-    font-family: 'Cutive Mono', monospace;     
-}
-
-.newQuestionHeader{
-    font-size: 2.75em;
-    font-family: 'Cutive Mono', monospace; 
-}
-
-.newQuestion input, #contentQuestion {
-    font-size: 0.75em;
-}
-
-.newQuestion button {
-    font-size: 0.75em;
-}
-
-.addQuestion {
-    font-size: 1.5em; 
-    font-family: 'Cutive Mono', monospace;
-}
-
 .listOfQuestionsTile {
     background-color: #FDFEFE;     
 }
 
+/*Style the forms in the New Question Component, Edit Question Component and New Answer Component*/
+
+.newQuestionHeader, .editQuestionHeader, .answerQuestionHeader{
+    font-size: 2.75em;
+    font-family: 'Cutive Mono', monospace; 
+}
+
+.newQuestion, .editQuestion, .answerQuestion{
+    font-size: 1.5em; 
+    font-family: 'Cutive Mono', monospace;     
+}
+
+.newQuestion input, .editQuestion input, .answerQuestion input, #contentQuestion, #contentAnswer {
+    font-size: 0.75em;
+}
+
+.newQuestion button, .editQuestion button, .answerQuestion button{
+    font-size: 0.75em;
+}
+
+.addQuestionButton, .editQuestionButton, .answerQuestionButton {
+    font-size: 1.5em; 
+    font-family: 'Cutive Mono', monospace;
+}
+
+/*Style the Question Template*/
+.questionPageHeader, .answersHeader {
+    font-size: 2.75em;
+    font-family: 'Cutive Mono', monospace;    
+}
+
+.questionDetail {
+    font-size: 1.5em;
+    font-family: 'Cutive Mono', monospace;
+}
+
+.listOfAnswers {
+    font-size: 1.40em;
+    font-family: 'Cutive Mono', monospace;
+}
+
+.editQuestionButton, .answerQuestionButton {
+    margin-top: 1em;
+    margin-bottom: 1.75em;
+}
 
 
 
