--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,4 @@
-<h2>{{model.questionTitle}} by {{model.authorQuestion}}</h2>
+<h2 class="questionPageHeader">{{model.questionTitle}} by {{model.authorQuestion}}</h2>
 
 {{question-detail question=model}}
 
