--- a/app/templates/components/edit-question.hbs
+++ b/app/templates/components/edit-question.hbs
@@ -1,9 +1,10 @@
 {{#if editQuestionForm}}
-    <h2>Edit {{question.questionTitle}}</h2>
 
-    <div>
+    <h2 class="editQuestionHeader">Edit {{question.questionTitle}}</h2>
 
-        <form>
+    <div class="editQuestion">
+
+        <form class="editQuestion">
 
             <div class="form-group">
                 <label for="authorQuestion">Enter your name or username</label>
@@ -20,11 +21,11 @@
                 {{textarea rows="3" class="form-control" value=contentQuestion id="contentQuestion" placeholder=question.contentQuestion}}
             </div>
 
-            <button class="btn btn-info" {{action 'edit' question}}>Edit Your Question</button>
+            <button class="btn btn-info" {{action 'edit' question}}>Submit</button>
 
         </form>
 
     </div>
 {{else}}
-    <button class="btn btn-info" {{action 'showEditForm'}}>Edit Your Question</button>
+    <button class="btn btn-info editQuestionButton" {{action 'showEditForm'}}>Edit Your Question</button>
 {{/if}}
