--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -1,7 +1,10 @@
 {{#if addNewAnswer}}
-    <h2>Add an Answer</h2>
-    <div>
-        <form>
+
+    <h2 class="answerQuestionHeader">Answer {{question.questionTitle}}</h2>
+
+    <div class="answerQuestion">
+
+        <form class="answerQuestion">
 
             <div class="form-group">
                 <label for="authorAnswer">Enter your name or username</label>
@@ -13,10 +16,10 @@
                 {{textarea rows="3" class="form-control" value=contentAnswer id="contentAnswer" placeholder="Enter details about the question"}}
             </div>
 
-            <button class="btn btn-success" {{action 'saveAnswer'}}>Submit Your Answer</button>
+            <button class="btn btn-success" {{action 'saveAnswer'}}>Submit</button>
 
         </form>
     </div>
 {{else}}
-    <button class="btn btn-success" {{action 'showAnswerForm'}}>Add an Answer</button>
+    <button class="btn btn-success answerQuestionButton" {{action 'showAnswerForm'}}>Add An Answer</button>
 {{/if}}
