Change position of Add Question Button Change the position for Add Question Button from the bottom of the page to the top of the page.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -132,6 +132,11 @@ footer {
     background-color: #FDFEFE;     
 }
 
+.addQuestionButton {    
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
 /*Style the forms in the New Question Component, Edit Question Component and New Answer Component*/
 
 .newQuestionHeader, .editQuestionHeader, .answerQuestionHeader{
