Create rows and column Create class row in Index Template and put ul tag in it Create class row in Application Template add put footer content in it Create class column in Question Tile Component and put all the code in it

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,14 +1,18 @@
-<div class="well listOfQuestionsTile">
+<div class="col-md-6">
 
-    {{!-- Link a question to page containing additional information --}}
-    {{#link-to 'question' question.id}}
+    <div class="well listOfQuestionsTile">
 
-        {{!-- Display Question and Author --}}
-        <li>{{question.questionTitle}} 
-            <br>
-            by {{question.authorQuestion}}
-        </li>
+        {{!-- Link a question to page containing additional information --}}
+        {{#link-to 'question' question.id}}
 
-    {{/link-to}}
+            {{!-- Display Question and Author --}}
+            <li>{{question.questionTitle}} 
+                <br>
+                by {{question.authorQuestion}}
+            </li>
+
+        {{/link-to}}
+
+    </div>
 
 </div>
