--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,9 +13,16 @@
     {{outlet}}
 
     <hr>
-
+    
     <footer>
-        <small>
-        <span class="copyright"> &copy; 2017 </span>{{#link-to 'index' class="siteName"}}--help<span class="underscore">_</span> {{/link-to}}</small>
+
+        <div class="row">
+
+            <small>
+            <span class="copyright"> &copy; 2017 </span>{{#link-to 'index' class="siteName"}}--help<span class="underscore">_</span> {{/link-to}}</small>
+            
+        </div>
+        
     </footer>
+
 </div>
