Create Add To Favorite Question Button Create Add To Favorite Question button to add a specific question to the list of favorite questions on Index Template Create addToQuestionCart function which adds a specific question to the list of favorite questions on the Index Template Inject Question Cart Service to eneble addToQuestionCart function to work

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -13,6 +13,10 @@
 
         {{/link-to}}
 
+
+        {{!-- Add to Favourite Question Cart --}}
+        <button class="btn btn-info" {{action 'addToQuestionCart' question}} >Add To Favorite Question</button>
+
     </div>
 
 </div>
