Create Computed Property Inject Question Cart service Create inCart computed property that implements the includes function and checks if a question is already in the list of favorite questions

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -13,9 +13,14 @@
 
         {{/link-to}}
 
-
-        {{!-- Add to Favourite Question Cart --}}
-        <button class="btn btn-info" {{action 'addToQuestionCart' question}} >Add To Favorite Question</button>
+        {{!-- Check if the question is in the cart --}}
+        {{#if question.inCart}}
+            {{!-- Display message if question is alreadi in Wuestion Cart --}}
+            Already in Favorite Question List
+        {{else}}
+            {{!-- Add to Favourite Question Cart --}}
+            <button class="btn btn-info" {{action 'addToQuestionCart' question}} >Add To Favorite Question</button>
+        {{/if}}
 
     </div>
 
