Render Most Answered Helper Render Most Answered Helper in Question Tile Component so that it appears above the question

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,7 @@
 <div class="col-md-6">
 
     <div class="well listOfQuestionsTile">
+        {{most-answered question}}
 
         {{!-- Link a question to page containing additional information --}}
         {{#link-to 'question' question.id}}
