Create Computed Property Heading Create Computed Property Heading to display the Question Title and Question Author properties Render Computed Property Heading in Question Detail Component Remove Question Title and Question Author Properties from Question Template

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,3 +1,5 @@
+<h2 class="questionPageHeader">{{heading}}</h2>
+
 <p class="questionDetail">{{question.contentQuestion}}</p>
 
 <h2 class="answersHeader"> Answers </h2>
