Create Answers Count Computed Property Create Computed Property answersCount to show the number of answers a question has Render answersCount Computed Property in Question Detail Component and Question Tile Component

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,3 +1,12 @@
-<h2 class="questionPageHeader">{{heading}}</h2>
+<h2 class="questionPageHeader">{{heading}} 
+    <br>
+
+    <small>
+        <p>{{answersCount}}</p>    
+    </small>
+    
+</h2>
+
+
 
 <p class="questionDetail">{{question.contentQuestion}}</p>
