Style Question Tile Change the height of the wells for the list of questions Create class answerCountDisplay for the answersCount computed property Float right the answers count Create class addToFavoriteButton and class addedMessage Change top margin for the add to favorite list biutton and text displayed when a question is already added

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -123,18 +123,30 @@ footer {
     font-size: 1.25em;  
 }
 
+.addQuestionButton {    
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
 .listOfQuestions {
     font-size: 1.5em; 
     font-family: 'Cutive Mono', monospace;  
 }
 
 .listOfQuestionsTile {
-    background-color: #FDFEFE;     
+    background-color: #FDFEFE; 
 }
 
-.addQuestionButton {    
-    margin-bottom: 1em;
-    margin-top: 1em;
+.well.listOfQuestionsTile {
+    height: 11.5em;
+}
+
+.answerCountDisplay {
+    float: right;
+}
+
+.addToFavoriteButton, .addedMessage {
+    margin-top: 0.5em;
 }
 
 /*Style the forms in the New Question Component, Edit Question Component and New Answer Component*/
