Style Display Cart Component Create favoriteQuestionHeader and listOfFavoriteQuestions classes Change the font size and font family for the favourite questions header Change the font size, font family, background color and height of the well for the list of favourite questions Add link-to to list of questions in favorite question list Change font size of text in the addToFavoriteButton

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -128,12 +128,12 @@ footer {
     margin-top: 1em;
 }
 
-.listOfQuestions {
+.listOfQuestions, .listOfFavoriteQuestions {
     font-size: 1.5em; 
     font-family: 'Cutive Mono', monospace;  
 }
 
-.listOfQuestionsTile {
+.listOfQuestionsTile, .listOfFavoriteQuestions {
     background-color: #FDFEFE; 
 }
 
@@ -147,6 +147,19 @@ footer {
 
 .addToFavoriteButton, .addedMessage {
     margin-top: 0.5em;
+}
+
+.addToFavoriteButton {
+    font-size: 0.75em; 
+}
+
+.favoriteQuestionsHeeader {
+    font-size: 2.75em;
+    font-family: 'Cutive Mono', monospace;  
+}
+
+.well.listOfFavoriteQuestions {
+    height: 8.5em;
 }
 
 /*Style the forms in the New Question Component, Edit Question Component and New Answer Component*/
