--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -1,23 +1,35 @@
-<h2>List of Favorite Questions</h2>
+<h2 class="favoriteQuestionsHeeader">List of Favorite Questions</h2>
 
 <div class="row">
 
     <ul class="list-unstyled">  
 
         {{#each questionCart.questions as |question|}}
+        
             <div class="col-md-6">
 
-                <div class="well">
+                <div class="well listOfFavoriteQuestions">
                     
-                    <li> 
-                        {{question.questionTitle}} 
+                    {{!-- Display Question and Author --}}
+                    <li>
+
+                        {{!-- Link a question to page containing additional information --}}
+                        {{#link-to 'question' question.id}}
+
+                            {{question.questionTitle}} 
+                            
+                        {{/link-to}}
+
                         <br>
+
                         by {{question.authorQuestion}}
+
                     </li>
                     
                 </div>
 
             </div>
+
         {{/each}}
 
     </ul>
