Style Question Template and its Components Add hr tags in Question Template Render the answerCount helper then the heading Computed Property in Question Detail Component Create answerCountInQuestionDetail class in Question Detail Component Float right answer count in Question Detail Component Create listOfAnswersTile in Answer Tile Component Change the top margin and bottom margin between answers

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,4 +1,9 @@
-<li>
-    {{answer.contentAnswer}} <br>
-    by {{answer.authorAnswer}}
-</li>
+<div class="listOfAnswersTile">
+
+    <li>
+        {{answer.contentAnswer}} 
+        <br>
+        by {{answer.authorAnswer}}
+    </li> 
+
+</div>
