--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,7 +7,9 @@
 
 <hr>
 
-<div class="row">
+<h2 class="listOfQuestionsHeeader">List of Questions Asked</h2>
+
+<div class="row listOfQuestionsRow">
     
     <ul class="list-unstyled listOfQuestions">
         {{#each model.questions as |question|}}
