--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -1,8 +1,8 @@
 <h2 class="favoriteQuestionsHeeader">List of Favorite Questions</h2>
 
-<div class="row">
+<div class="row listOfFavoriteQuestionsRow">
 
-    <ul class="list-unstyled">  
+    <ul class="list-unstyled ulOfFavoriteQuestions">  
 
         {{#each questionCart.questions as |question|}}
         
